# python-testing-with-pytest

./: README.md  pyproject.toml
ch01/: test_two.py
ch02/: test_card.py
ex01/: test_less_than.py  test_membership.py  test_not_in_fizzbuzz.py
