[tool.poetry]
name = "python-testing-with-pytest"
version = "0.1.0"
description = "Code from the book, \"Python Testing with pytest\", 2nd ed."
authors = ["Larry Jones <mrwizard82d1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ipython = "^8.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
